Fixed register page, aligned login page

--- a/css/login.css
+++ b/css/login.css
@@ -40,8 +40,8 @@ html, body {
     font-size: 7rem; 
     color: #bc1823; 
     position: absolute; 
-    left: 44%; 
-    top: 20%; 
+    left: 46%; 
+    top: 22%; 
     z-index: 1; 
 }
 
@@ -58,8 +58,8 @@ input[type=text] {
     border-radius: 24px; 
     box-sizing: border-box; 
     border: 1px solid #d9dfdb; 
-    top: 35%; 
-    left: 35%;
+    top: 38%; 
+    left: 36%;
     text-align: center;
     position: absolute; 
     z-index: 1;
@@ -77,8 +77,8 @@ input[type=password] {
     border-radius: 24px; 
     box-sizing: border-box; 
     border: 1px solid #d9dfdb; 
-    top: 45%; 
-    left: 35%;
+    top: 48%; 
+    left: 36%;
     text-align: center;
     position: absolute;
     z-index: 1; 
@@ -90,7 +90,7 @@ input[type=password] {
     color: white; 
     padding: 10px 20px;
     top: 63%; 
-    left: 46%; 
+    left: 48.5%; 
     position: absolute; 
     background-color: #bc1823;
     border-radius: 24px; 
@@ -107,7 +107,7 @@ input[type=password] {
     color: #bc1823; 
     padding: 10px 20px;
     top: 75%; 
-    left: 38%; 
+    left: 42%; 
     position: absolute; 
     background: none;
     border: none; 
@@ -123,7 +123,7 @@ input[type=password] {
     color: #bc1823; 
     padding: 10px 20px;
     top: 80%; 
-    left: 34%; 
+    left: 39%; 
     position: absolute; 
     background: none;
     border: none; 
