--- a/css/register.css
+++ b/css/register.css
@@ -40,12 +40,12 @@ html, body {
     font-size: 7rem; 
     color: #bc1823; 
     position: absolute; 
-    left: 40%; 
+    left: 43%; 
     top: 20%; 
     z-index: 1; 
 }
 
-input[type=text] {
+input[type=username] {
     font-family: bobby; 
     color: #212932; 
     font-size: 2.5rem; 
@@ -64,7 +64,8 @@ input[type=text] {
     z-index: 1;
 }
 
-input[type=password] {
+
+input[type=email] {
     font-family: bobby; 
     color: #212932; 
     font-size: 2.5rem; 
@@ -79,10 +80,46 @@ input[type=password] {
     top: 45%; 
     left: 35%;
     text-align: center;
+    position: absolute; 
+    z-index: 1;
+}
+
+input[type=password] {
+    font-family: bobby; 
+    color: #212932; 
+    font-size: 2.5rem; 
+    height: 8%; 
+    width: 30%; 
+    padding: 12px 20px; 
+    margin: 20px; 
+    background-color: #d9dfdb;
+    border-radius: 24px; 
+    box-sizing: border-box; 
+    border: 1px solid #d9dfdb; 
+    top: 55%; 
+    left: 35%;
+    text-align: center;
     position: absolute;
     z-index: 1; 
 }
-
+input[type=re-password] {
+    font-family: bobby; 
+    color: #212932; 
+    font-size: 2.5rem; 
+    height: 8%; 
+    width: 30%; 
+    padding: 12px 20px; 
+    margin: 20px; 
+    background-color: #d9dfdb;
+    border-radius: 24px; 
+    box-sizing: border-box; 
+    border: 1px solid #d9dfdb; 
+    top: 65%; 
+    left: 35%;
+    text-align: center;
+    position: absolute;
+    z-index: 1; 
+}
 #signup-button {
     font-family: bobby;
     font-size: 2rem;
